# mini-jukebox

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py
