[project]
name = "mini-jukebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.14",
    "aiosignal>=1.4.0",
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.7.14",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.2",
    "discord-py>=2.5.2",
    "frozenlist>=1.7.0",
    "idna>=3.10",
    "lyricsgenius>=3.6.4",
    "multidict>=6.6.3",
    "packaging>=25.0",
    "propcache>=0.3.2",
    "pycparser>=2.22",
    "pynacl>=1.5.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "soupsieve>=2.7",
    "typing-extensions>=4.14.1",
    "urllib3>=2.5.0",
    "wheel>=0.45.1",
    "yarl>=1.20.1",
    "yt-dlp>=2026.2.4",
    "yt-dlp-ejs>=0.4.0",
    "zipp>=3.23.0",
]
